--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -49,4 +49,21 @@ jobs:
       - name: Setup AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACC_
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.AWS_REGION }}
+
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v3
+
+      - name: Terraform Init
+        run: terraform init -input=false
+
+      - name: Terraform Apply
+        env:
+          TF_VAR_aws_region: "${{ secrets.AWS_REGION }}"
+          TF_VAR_dockerhub_username: "${{ secrets.DOCKERHUB_USERNAME }}"
+          TF_VAR_image_name: "java-ec2-demo"
+          TF_VAR_image_tag: "latest"
+          TF_VAR_deploy_version: "${{ github.sha }}"
+        run: terraform apply -auto-approve -input=false
